# longeval-summarization

./: .gitignore  README.md  pyproject.toml
data/pubmed/: beam_3.jsonl
data/pubmed_summaries/: beam_3_block_6_gram.jsonl
data/squality_alignment/: data.json
longeval/: evaluate_linkers.py  metrics_corr_confidence_pubmed.py  metrics_corr_confidence_squality.py  prepare_summaries.py  preprocessing_utils.py  results_utils.py  utils.py
longeval/linkage/: evaluate_linkers.py  multivers_utils.py  summac_utils.py  superpal_utils.py  utils.py
longeval/linkage/longchecker/: data.py  model.py  util.py
longeval/linkage/similarity/: test_sim.py
longeval/linkage/summac/: model_summac.py  utils_frank_evaluation.py
longeval/metrics/: bart_score.py  metric_utils.py  plot_violin_utils.py  time_utils.py
templates/: coarse_instructions.md  fine_sandbox_interface.html
