[tool.poetry]
name = "longeval"
version = "0.1.3"
description = "Prepare your summarization data in a format compatible with the longeval guidelines for human evaluation."
authors = ["Kalpesh Krishna, Erin Bransom, Bailey Kuehl, Mohit Iyyer, Pradeep Dasigi, Arman Cohan, Kyle Lo"]
license = "Apache License 2.0"
repository = 'https://github.com/martiansideofthemoon/longeval-summarization'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^4.26.0"
spacy = "3.0.0"
torch = "^1.13.1"
tqdm = "^4.64.1"
pandas = "1.1"
bert-score = "^0.3.12"
pytorch-lightning = "1.2.1"
nltk = "^3.8.1"
sentencepiece = "^0.1.97"
rank-bm25 = "^0.2.2"
rouge-score = "^0.1.2"
statsmodels = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
